resolve sonar issues.